text in paragraph changed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h1>New Web Project Page</h1>
-        <p>New paragraph added</p>
+        <p>New paragraph added after h1</p>
     </body>
 </html>
